--- a/Controller/src/main/resources/templates/fragment/__bootstrap_link.html
+++ b/Controller/src/main/resources/templates/fragment/__bootstrap_link.html
@@ -1,3 +1,114 @@
 <link rel="stylesheet" href="node_module/bootstrap-4.4.1/dist/css/bootstrap.min.css">
 <script src="node_module/jquery/dist/jquery.min.js"></script>
 <script src="node_module/bootstrap-4.4.1/dist/js/bootstrap.min.js"></script>
+<style>
+
+    /*
+        for title
+     */
+
+    @media (max-width: 2200px) {
+        .head-size{
+            font-size: xx-large;
+        }
+    }
+    @media (max-width: 1024px) {
+        .head-size{
+            font-size: x-large;
+        }
+    }
+    @media (max-width: 992px) {
+        .head-size{
+            font-size: x-large;
+        }
+    }
+
+    @media (max-width: 768px) {
+        .head-size{
+            font-size: large;
+        }
+    }
+    @media (max-width: 480px) {
+        .head-size{
+            font-size: medium;
+        }
+    }
+
+
+    /*
+      for name and date
+    */
+    @media (max-width: 2200px) {
+        .pf-size{
+            font-size: medium;
+        }
+    }
+    @media (max-width: 1024px) {
+        .pf-size{
+            font-size: small;
+        }
+    }
+    @media (max-width: 992px) {
+        .pf-size{
+            font-size:smaller;
+        }
+    }
+
+    @media (max-width: 768px) {
+        .pf-size{
+            font-size: x-small;
+        }
+    }
+    @media (max-width: 480px) {
+        .pf-size{
+            font-size: xx-small;
+        }
+    }
+
+
+
+    /* Shared */
+    .loginBtn {
+        box-sizing: border-box;
+        position: relative;
+        /* width: 13em;  - apply for fixed size */
+        margin: 0.2em;
+        padding: 0 15px 0 46px;
+        border: none;
+        text-align: left;
+        line-height: 34px;
+        white-space: nowrap;
+        border-radius: 0.2em;
+        font-size: 16px;
+        color: #FFF;
+    }
+    .loginBtn:before {
+        content: "";
+        box-sizing: border-box;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 34px;
+        height: 100%;
+    }
+    .loginBtn:focus {
+        outline: none;
+    }
+    .loginBtn:active {
+        box-shadow: inset 0 0 0 32px rgba(0,0,0,0.1);
+    }
+
+    /* Google */
+    .loginBtn--google {
+        /*font-family: "Roboto", Roboto, arial, sans-serif;*/
+        background: #DD4B39;
+    }
+    .loginBtn--google:before {
+        border-right: #BB3F30 1px solid;
+        background: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/14082/icon_google.png') 6px 6px no-repeat;
+    }
+    .loginBtn--google:hover,
+    .loginBtn--google:focus {
+        background: #E74B37;
+    }
+</style>
