--- a/Controller/src/main/resources/templates/admin-layout.html
+++ b/Controller/src/main/resources/templates/admin-layout.html
@@ -18,7 +18,7 @@
     </style>
 </head>
 <body>
-    <div th:replace="~{navbar/__navbar}"></div>
+    <div th:replace="~{navbar/__admin_navbar}"></div>
     <div class="" layout:fragment="content"></div>
     <th:block th:include="~{fragment/__javascript_link}"></th:block>
 
