--- a/Controller/src/main/resources/templates/navbar/__admin_navbar.html
+++ b/Controller/src/main/resources/templates/navbar/__admin_navbar.html
@@ -10,10 +10,6 @@
     <a class="navbar-brand ml-4 text-dark" href="#">
         <h3><b>KhmerHowTo</b></h3>
     </a>
-    <div class="mx-auto  text-center w-75 d-none d-lg-block">
-        <input type="text" class="form-control-one-line w-50" placeholder="Search">
-    </div>
-   
     
     <div class="collapse navbar-collapse" id="navbarTopRightSide">
         
@@ -22,23 +18,25 @@
 
                 last 3 = text-center    
              -->
-            <li class="nav-item  d-none d-lg-block">
+            <li class="nav-item d-none d-lg-block">
                 <a class="nav-link text-dark" href="#">
                     <h5>Home</h5>
                 </a>
             </li>
-            <li class="nav-item  d-none d-lg-block">
+            <li class="nav-item d-none d-lg-block">
                 <a class="nav-link text-center text-dark" href="#">
-                    <h5>Category</h5>
+                    <h5>Admin</h5>
                 </a>
             </li>
-            <li class="nav-item  ">
-                <a class="nav-link text-center  d-none d-lg-block" href="#">  
-                    <i class="material-icons-new outline-notifications md-24"></i>
+            <li class="nav-item d-none d-lg-block ">
+                <a class="nav-link text-center " href="#">  
+                 
+                        <i class="material-icons-new outline-home md-24"></i>
+                    
                 </a>
             </li>
-            <li class="nav-item ">
-                <a class="nav-link text-center  d-none d-lg-block" href="#">  
+            <li class="nav-item d-none d-lg-block">
+                <a class="nav-link text-center" href="#">  
                     <i class="material-icons-new outline-account_circle md-36"></i>
                 </a>
             </li>
@@ -52,16 +50,31 @@
             </li>
             <li class="list-group-item text-center">
                 <a class="nav-link text-center text-dark" href="#">
-                    <i class="material-icons-new outline-library_books md-36"></i>
-                    <h5>Category</h5>
+                    <i class="material-icons-new outline-account_circle md-36"></i>
+                    <h5>Admin</h5>
 
                 </a>
             </li>
             <li class="list-group-item text-center">
-                <i class="material-icons-new outline-notifications"></i>
-                <p>Notification</p>
+                <i class="material-icons-new outline-library_books"></i>
+                <p>Article</p>
             </li>
-            
+            <li class="list-group-item text-center">
+                <i class="material-icons-new outline-people"></i>
+                <p>User</p>
+            </li>
+            <li class="list-group-item text-center">
+                <i class="material-icons-new outline-question_answer"></i>
+                <p>Question</p>
+            </li>
+            <li class="list-group-item text-center">
+                <i class="material-icons-new outline-feedback"></i>
+                <p>Feedback</p>
+            </li>
+            <li class="list-group-item text-center">
+                <i class="material-icons-new outline-settings_applications"></i>
+                <p>Setting</p>
+            </li>
         </ul> 
     </div>
 </nav>
