--- a/Controller/src/main/resources/static/css/maTooltip.css
+++ b/Controller/src/main/resources/static/css/maTooltip.css
@@ -11,7 +11,7 @@
   display: block;
   visibility: visible;
   padding: 5px;
-  
+  border-radius: 20px;
   opacity: 0.8; /* Shall be animated TO from 0 ? */
   
   /*
@@ -92,13 +92,14 @@
   border-left: 5px solid transparent;
   border-right: 5px solid transparent;
   border-bottom: 5px solid #000;
+  border-radius: 20px !important;
 }
 
 .maTooltip-contents
 {
   max-width: 200px;
   padding: 3px 8px;
-
+  border-radius: 20px !important;
   color: #FFF;
 
   text-align: center;
