update navbar alignment

--- a/Controller/src/main/resources/templates/admin/admin-home.html
+++ b/Controller/src/main/resources/templates/admin/admin-home.html
@@ -9,7 +9,66 @@
         <title>Document</title>
     </head>
     <body>
-        <div class="content bg-white" layout:fragment="content">
+        <div class="content p-5  "  layout:fragment="content">
+            <div class="bg-white p-5 right-side-bar-upper-div ">
+                <!-- upper -->
+               
+                <h1 class="text-center my-5"><b>Start Your Day With KhmerHowTo</b></h1>
+                <!-- middle -->
+                <div class="d-flex flex-lg-row flex-column justify-content-around">
+                    <div class="card p-2 border-0" style="width: 22rem;">
+                        <div class="m-4">
+                            <img src="image-static/machine-learning.svg" class="card-img-top" alt="...">
+                        </div>
+                        <div class="card-body text-center">
+                            <h3 class="card-title ">
+                                <b>User</b>
+                                
+                            </h3>
+                            <p class="card-text">
+                                Manage Your Repeat-Reader 
+                            </p>
+                            <button class="btn btn-success ">
+                               Get Started
+                            </button>
+                        </div>
+                    </div>
+                    <div class="card p-2 border-0" style="width: 22rem;">
+                        <div class="m-4">
+                            <img src="image-static/content.svg" class="card-img-top" alt="...">
+                        </div>
+                        <div class="card-body text-center">
+                            <h3 class="card-title text-center">
+                                <b>Article</b>
+                            </h3>
+                            <p class="card-text">
+                                Manage Article List
+                            </p>
+                            <button class="btn btn-success te">
+                                Get Started
+                            </button>
+                        </div>
+                    </div>
+                    <div class="card p-2 border-0" style="width: 22rem;">
+                        <div class="m-4">
+                            <img src="image-static/machine-learning.svg" class="card-img-top" alt="...">
+                        </div>
+                        <div class="card-body text-center">
+                            <h3 class="card-title text-center">
+                                <b>Category</b>
+                            </h3>
+                            <p class="card-text">
+                                Update Your Category
+                            </p>
+                            <button class="btn btn-success te">
+                                Get Started
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <!-- middle -->
+                 
+            </div>
         </div>
     </body>
 </html>
