--- a/Controller/src/main/resources/templates/navbar/__navbar_css.html
+++ b/Controller/src/main/resources/templates/navbar/__navbar_css.html
@@ -18,8 +18,8 @@ li.nav-link>h5{
 /* end */
 .material-icons-new {
     display: inline-block;
-    width: 36px;
-    height: 36px;
+    width: 24px;
+    height: 24px;
     background-repeat: no-repeat;
     background-size: contain;
 }
@@ -49,4 +49,22 @@ select.form-control-one-line:focus {
     background: transparent;
     border: none;
 }
+.left-side-menu-div,.left-side-menu-ul{
+    height: 100vh;
+}
+
+.right-side-bar-form>div>div{
+    width: 40%;
+}
+.right-side-bar-upper-div{
+    height: 90vh;
+}
+    @media only screen and (max-width: 992px) {
+    .right-side-bar-upper-div{
+        background-color: #E5EAED !important;
+    }
+    .right-side-bar-upper-div>div>div{ 
+        width: 100% !important;
+    }
+}        
 </style>
