--- a/Controller/src/main/resources/templates/navbar/__admin_navbar.html
+++ b/Controller/src/main/resources/templates/navbar/__admin_navbar.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-white border-bottom" >
+<nav class="navbar navbar-expand-lg bg-white border-bottom pb-0" >
     <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarTopRightSide" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon ">
             <i class="material-icons-new outline-toc">
