align right side bar and add category

--- a/Controller/src/main/resources/templates/navbar/__navbar_css.html
+++ b/Controller/src/main/resources/templates/navbar/__navbar_css.html
@@ -57,7 +57,7 @@ select.form-control-one-line:focus {
     width: 40%;
 }
 .right-side-bar-upper-div{
-    height: 90vh;
+    /* height: 90vh; */
 }
     @media only screen and (max-width: 992px) {
     .right-side-bar-upper-div{
