add customize admin info, link menu , add category

--- a/Controller/src/main/resources/templates/admin-layout.html
+++ b/Controller/src/main/resources/templates/admin-layout.html
@@ -25,13 +25,13 @@
             <div class="col-1 px-0 left-side-menu-div d-none d-lg-block">
                 <div th:replace="~{navbar/__admin_left_side_bar}"></div>
             </div>
-            <div class="col-md-12 col-lg-11 bg-color-two">
+            <div class="col-md-12 col-lg-11 ">
                 <div class="" layout:fragment="content"></div>
             </div>
         </div>  
     </div>
    
     <th:block th:include="~{fragment/__javascript_link}"></th:block>
-
+    <div class="" layout:fragment="content-js"></div>
 </body>
 </html>
