--- a/Controller/src/main/resources/templates/fragment/__bootstrap_link.html
+++ b/Controller/src/main/resources/templates/fragment/__bootstrap_link.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" id="hahaha" th:href="@{/node_module/bootstrap-4.4.1/dist/css/bootstrap.min.css}">
+<link rel="stylesheet" th:href="@{/node_module/bootstrap-4.4.1/dist/css/bootstrap.min.css}">
 
 <style>
 
