--- a/Controller/src/main/resources/templates/fragment/__javascript_link.html
+++ b/Controller/src/main/resources/templates/fragment/__javascript_link.html
@@ -1,2 +1,2 @@
-<script src="node_module/jquery/dist/jquery.min.js"></script>
-<script src="node_module/bootstrap-4.4.1/dist/js/bootstrap.min.js"></script>
+<script src="/node_module/jquery/dist/jquery.min.js"></script>
+<script src="/node_module/bootstrap-4.4.1/dist/js/bootstrap.min.js"></script>
