--- a/Controller/src/main/resources/templates/navbar/__admin_left_side_bar.html
+++ b/Controller/src/main/resources/templates/navbar/__admin_left_side_bar.html
@@ -5,32 +5,37 @@
         }
     </style>
     <ul class="list-group list-group-flush left-side-menu-ul ">
-        <li class="list-group-item text-center w-100">
+        <li onclick="location.href='/admin';" class="list-group-item text-center w-100">
             <br>
             <i class="material-icons-new outline-home"></i>
             <p>Home</p>
         </li>
-        <li class="list-group-item text-center">
+        <li onclick="location.href='/admin/category';"  class="list-group-item text-center">
+            <br>
+            <i class="material-icons-new outline-category"></i>
+            <p>Category</p>
+        </li>
+        <li onclick="location.href='/admin';"  class="list-group-item text-center">
             <br>
             <i class="material-icons-new outline-library_books"></i>
             <p>Article</p>
         </li>
-        <li class="list-group-item text-center">
+        <li onclick="location.href='/admin';"  class="list-group-item text-center">
             <br>
             <i class="material-icons-new outline-people"></i>
             <p>User</p>
         </li>
-        <li class="list-group-item text-center">
+        <li onclick="location.href='/admin';"  class="list-group-item text-center">
             <br>
             <i class="material-icons-new outline-question_answer"></i>
             <p>Question</p>
         </li>
-        <li class="list-group-item text-center">
+        <li onclick="location.href='/admin';"  class="list-group-item text-center">
             <br>
             <i class="material-icons-new outline-feedback"></i>
             <p>Feedback</p>
         </li>
-        <li class="list-group-item text-center">
+        <li onclick="location.href='/admin/customize';"  class="list-group-item text-center">
             <br>
             <i class="material-icons-new outline-settings_applications"></i>
             <p>Setting</p>
