Add Admin pages

--- a/Controller/src/main/resources/templates/navbar/__admin_left_side_bar.html
+++ b/Controller/src/main/resources/templates/navbar/__admin_left_side_bar.html
@@ -20,17 +20,17 @@
             <i class="material-icons-new outline-library_books"></i>
             <p>Article</p>
         </li>
-        <li onclick="location.href='/admin';"  class="list-group-item text-center">
+        <li onclick="location.href='/admin/user';"  class="list-group-item text-center">
             <br>
             <i class="material-icons-new outline-people"></i>
             <p>User</p>
         </li>
-        <li onclick="location.href='/admin';"  class="list-group-item text-center">
+        <li onclick="location.href='/admin/question';"  class="list-group-item text-center">
             <br>
             <i class="material-icons-new outline-question_answer"></i>
             <p>Question</p>
         </li>
-        <li onclick="location.href='/admin';"  class="list-group-item text-center">
+        <li onclick="location.href='/admin/feedback';"  class="list-group-item text-center">
             <br>
             <i class="material-icons-new outline-feedback"></i>
             <p>Feedback</p>
