update navbar color and style

--- a/Controller/src/main/resources/templates/navbar/__admin_navbar.html
+++ b/Controller/src/main/resources/templates/navbar/__admin_navbar.html
@@ -1,3 +1,10 @@
+<style>
+    .icon-linear-color{
+        background: linear-gradient(#FFBF3F 10%, #FF6A8F 100%);
+        -webkit-background-clip: text;
+	    -webkit-text-fill-color: transparent;
+    }
+</style>
 <nav class="navbar navbar-expand-lg bg-white border-bottom pb-0" >
     <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarTopRightSide" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon ">
@@ -20,24 +27,24 @@
              -->
             <li class="nav-item d-none d-lg-block">
                 <a class="nav-link text-dark" href="#">
-                    <h5>Home</h5>
+                    <h5 class="icon-linear-color">Home</h5>
                 </a>
             </li>
             <li class="nav-item d-none d-lg-block">
                 <a class="nav-link text-center text-dark" href="#">
-                    <h5>Admin</h5>
+                    <h5 class="icon-linear-color">Admin</h5 >
                 </a>
             </li>
             <li class="nav-item d-none d-lg-block ">
                 <a class="nav-link text-center " href="#">  
                  
-                        <i class="material-icons-new outline-home md-24"></i>
+                    <img class="" src="/icon/non-notification.svg" style="width: 30px; height: 30px;" alt="">
                     
                 </a>
             </li>
             <li class="nav-item d-none d-lg-block">
                 <a class="nav-link text-center" href="#">  
-                    <i class="material-icons-new outline-account_circle md-36"></i>
+                    <img class="" src="/icon/user-profile.svg" style="width: 28px; height: 28px;" alt="">
                 </a>
             </li>
         </ul>
