--- a/Controller/src/main/resources/templates/navbar/__navbar_css.html
+++ b/Controller/src/main/resources/templates/navbar/__navbar_css.html
@@ -22,6 +22,7 @@ li.nav-link>h5{
     height: 24px;
     background-repeat: no-repeat;
     background-size: contain;
+    color: #F85252;
 }
 
 .icon-white {
