--- a/Controller/src/main/resources/templates/navbar/__admin_left_side_bar.html
+++ b/Controller/src/main/resources/templates/navbar/__admin_left_side_bar.html
@@ -3,42 +3,46 @@
         li.list-group-item {
             padding: 0%;
         }
+        .left-side-text{
+            color:#b93d5c;
+        }
     </style>
     <ul class="list-group list-group-flush left-side-menu-ul ">
         <li onclick="location.href='/admin';" class="list-group-item text-center w-100">
             <br>
-            <i class="material-icons-new outline-home"></i>
-            <p>Home</p>
+            <!-- <i class="material-icons-new outline-home"></i> -->
+            <img class="" src="/icon/home.svg" style="width: 30px; height: 30px;" alt="">
+            <h6 class="py-2 left-side-text">Home</h6>
         </li>
         <li onclick="location.href='/admin/category';"  class="list-group-item text-center">
             <br>
-            <i class="material-icons-new outline-category"></i>
-            <p>Category</p>
+            <img class="" src="/icon/category.svg" style="width: 30px; height: 30px;" alt="">
+            <h6 class="py-2 left-side-text">Category</h6>
         </li>
         <li onclick="location.href='/admin';"  class="list-group-item text-center">
             <br>
-            <i class="material-icons-new outline-library_books"></i>
-            <p>Article</p>
+            <img class="" src="/icon/content.svg" style="width: 30px; height: 30px;" alt="">
+            <h6 class="py-2 left-side-text">Article</h6>
         </li>
-        <li onclick="location.href='/admin';"  class="list-group-item text-center">
+        <li onclick="location.href='/admin/user';"  class="list-group-item text-center">
             <br>
-            <i class="material-icons-new outline-people"></i>
-            <p>User</p>
+            <img class="" src="/icon/user-profile.svg" style="width: 30px; height: 30px;" alt="">
+            <h6 class="py-2 left-side-text">User</h6>
         </li>
-        <li onclick="location.href='/admin';"  class="list-group-item text-center">
+        <li onclick="location.href='/admin/question';"  class="list-group-item text-center">
             <br>
-            <i class="material-icons-new outline-question_answer"></i>
-            <p>Question</p>
+            <img class="" src="/icon/question.svg" style="width: 30px; height: 30px;" alt="">
+            <h6 class="py-2 left-side-text">Question</h6>
         </li>
-        <li onclick="location.href='/admin';"  class="list-group-item text-center">
+        <li onclick="location.href='/admin/feedback';"  class="list-group-item text-center">
             <br>
-            <i class="material-icons-new outline-feedback"></i>
-            <p>Feedback</p>
+            <img class="" src="/icon/rate.svg" style="width: 30px; height: 30px;" alt="">
+            <h6 class="py-2 left-side-text">Feedback</h6>
         </li>
         <li onclick="location.href='/admin/customize';"  class="list-group-item text-center">
             <br>
-            <i class="material-icons-new outline-settings_applications"></i>
-            <p>Setting</p>
+            <img class="" src="/icon/setting.svg" style="width: 30px; height: 30px;" alt="">
+            <h6 class="py-2 left-side-text">Setting</h6>
         </li>
         <hr>
     </ul>
