update icon some alignment

--- a/Controller/src/main/resources/templates/admin-layout.html
+++ b/Controller/src/main/resources/templates/admin-layout.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://storage.googleapis.com/non-spec-apps/mio-icons/latest/outline.css">
 
     <th:block th:include="~{fragment/__bootstrap_link}"></th:block>
-    <th:block th:include="~{navbar/__navbar_css}"></th:block>
+    <th:block th:include="~{navbar/__navbar_admin_css}"></th:block>
     <style>
     .bg-color-two {
         background-color: #E5EAED;
