--- a/Controller/src/main/resources/templates/client-home.html
+++ b/Controller/src/main/resources/templates/client-home.html
@@ -22,7 +22,7 @@
             }
             .v-parent > div {
                 width: 48%;
-                max-height: 60vh; 
+                max-height: 70vh; 
                 border : 1px solid black;
                 /* padding: 10px; */
                 margin-bottom: 2%; 
@@ -32,7 +32,9 @@
             }
             
             .group-one-c-one{
-                background: url("image-static/dribbble_starry_night.png") no-repeat center center;
+                /* background: url("image-static/dribbble_starry_night.png") no-repeat center center; */
+                background-image:  url("image-static/dribbble_starry_night.png");
+                background-position: center center;
                 background-size: cover;
                 filter: brightness(60%);
             }
