--- a/Controller/src/main/resources/templates/navbar/__navbar_admin_css.html
+++ b/Controller/src/main/resources/templates/navbar/__navbar_admin_css.html
@@ -36,12 +36,12 @@ li.nav-link>h5{
 input[type="text"].form-control-one-line,
 select.form-control-one-line{
     background: transparent;
-    border: 1px solid #00000087; 
-    /* border: none;
-    border-bottom: 1px solid #000000; */
+    /* border: 1px solid #00000087;  */
+    border: none;
+    border-bottom: 1px solid #000000; 
     -webkit-box-shadow: none;
     box-shadow: none;
-    border-radius: 20px;
+    /* border-radius: 20px; */
 }
 
 input[type="text"]:focus,
