--- a/Controller/src/main/resources/templates/admin/admin-category.html
+++ b/Controller/src/main/resources/templates/admin/admin-category.html
@@ -27,6 +27,15 @@
             background-color: #fff;
             box-shadow: 05px 10px 18px rgba(33,33,33,.2); 
             }
+            .card{
+                width: 15%;
+                margin-bottom: 3%;
+            }
+            @media only screen and (max-width: 992px) {
+               .card{ 
+                   width: 30%;
+               }
+            }
             </style>
             <!-- UPPER DIV -->
             <div class="d-flex align-items-center justify-content-around bg-color-two right-side-bar-upper-div">
@@ -44,14 +53,14 @@
             </div>
             <!-- UPPER DIV -->
             <!-- MIDDLE Div -->
-            <div class="d-flex justify-content-between my-4">
+            <div class="d-flex  justify-content-between my-4">
                 <h3>Category</h3>
                 <a href="#">See more</a>
             </div>
             <!-- MIDDLE Div -->
             <!-- FOOTER DIV  -->
-            <div class="d-flex justify-content-around ">
-                <div class="card bg-color-two p-2 hover-white-highlight-for-click" style="width: 14rem;">
+            <div class="d-flex flex-wrap justify-content-around ">
+                <div class="card bg-color-two p-2 hover-white-highlight-for-click" style="">
                     <div class="m-4">
                         <img src="/image-static/machine-learning.svg" class="card-img-top" alt="...">
                     </div>
@@ -61,7 +70,7 @@
                         </h6>
                     </div>
                 </div>
-                <div class="card bg-color-two p-2 hover-white-highlight-for-click" style="width: 14rem;">
+                <div class="card bg-color-two p-2 hover-white-highlight-for-click" style="">
                     <div class="m-4" >
                         <img src="/image-static/machine-learning.svg" class="card-img-top" alt="...">
                     </div>
@@ -71,7 +80,7 @@
                         </h6>
                     </div>
                 </div>
-                <div class="card bg-color-two p-2 hover-white-highlight-for-click" style="width: 14rem;">
+                <div class="card bg-color-two p-2 hover-white-highlight-for-click" style="">
                     <div class="m-4">
                         <img src="/image-static/machine-learning.svg" class="card-img-top" alt="...">
                     </div>
@@ -81,7 +90,7 @@
                         </h6>
                     </div>
                 </div>
-                <div class="card bg-color-two p-2 hover-white-highlight-for-click" style="width: 14rem;">
+                <div class="card bg-color-two p-2 hover-white-highlight-for-click" style="">
                     <div class="m-4">
                         <img src="/image-static/machine-learning.svg" class="card-img-top" alt="...">
                     </div>
@@ -91,7 +100,7 @@
                         </h6>
                     </div>
                 </div>
-                <div class="card bg-color-two p-2 hover-white-highlight-for-click" style="width: 14rem;">
+                <div class="card bg-color-two p-2 hover-white-highlight-for-click" style="">
                     <div class="m-4">
                         <img src="/image-static/machine-learning.svg" class="card-img-top" alt="...">
                     </div>
@@ -101,7 +110,7 @@
                         </h6>
                     </div>
                 </div>
-                <div class="card bg-color-two p-2 hover-white-highlight-for-click" style="width: 14rem;">
+                <div class="card bg-color-two p-2 hover-white-highlight-for-click" style="">
                     <div class="m-4">
                         <img src="/image-static/machine-learning.svg" class="card-img-top" alt="...">
                     </div>
