update navbar color

--- a/Controller/src/main/resources/templates/admin/admin-home.html
+++ b/Controller/src/main/resources/templates/admin/admin-home.html
@@ -24,7 +24,7 @@
                 <div class="d-flex flex-lg-row flex-column justify-content-around">
                     <div class="card p-2 border-0" style="width: 25%;">
                         <div class="m-4">
-                            <img src="image-static/machine-learning.svg" class="card-img-top" alt="...">
+                            <img src="/image-static/machine-learning.svg" class="card-img-top" alt="...">
                         </div>
                         <div class="card-body text-center">
                             <h3 class="card-title ">
@@ -41,7 +41,7 @@
                     </div>
                     <div class="card p-2 border-0" style="width: 25%;">
                         <div class="m-4">
-                            <img src="image-static/content.svg" class="card-img-top" alt="...">
+                            <img src="/image-static/content.svg" class="card-img-top" alt="...">
                         </div>
                         <div class="card-body text-center">
                             <h3 class="card-title text-center">
@@ -57,7 +57,7 @@
                     </div>
                     <div class="card p-2 border-0" style="width: 25%;">
                         <div class="m-4">
-                            <img src="image-static/machine-learning.svg" class="card-img-top" alt="...">
+                            <img src="/image-static/machine-learning.svg" class="card-img-top" alt="...">
                         </div>
                         <div class="card-body text-center">
                             <h3 class="card-title text-center">
