--- a/Controller/src/main/resources/templates/navbar/__admin_navbar.html
+++ b/Controller/src/main/resources/templates/navbar/__admin_navbar.html
@@ -1,6 +1,6 @@
 <style>
     .icon-linear-color{
-        background: linear-gradient(#FFBF3F 10%, #FF6A8F 100%);
+        background: #b93d5c;
         -webkit-background-clip: text;
 	    -webkit-text-fill-color: transparent;
     }
@@ -38,13 +38,13 @@
             <li class="nav-item d-none d-lg-block ">
                 <a class="nav-link text-center " href="#">  
                  
-                    <img class="" src="/icon/non-notification.svg" style="width: 30px; height: 30px;" alt="">
+                    <img class="" src="/icon/notification-navbar-v2.svg" style="width: 28px; height: 28px;" alt="">
                     
                 </a>
             </li>
             <li class="nav-item d-none d-lg-block">
                 <a class="nav-link text-center" href="#">  
-                    <img class="" src="/icon/user-profile.svg" style="width: 28px; height: 28px;" alt="">
+                    <img class="" src="/icon/user-navbar-v2.svg" style="width: 30px; height: 30px;" alt="">
                 </a>
             </li>
         </ul>
