--- a/Controller/src/main/resources/templates/navbar/__admin_left_side_bar.html
+++ b/Controller/src/main/resources/templates/navbar/__admin_left_side_bar.html
@@ -11,7 +11,7 @@
         <li onclick="location.href='/admin';" class="list-group-item text-center w-100">
             <br>
             <!-- <i class="material-icons-new outline-home"></i> -->
-            <img class="" src="/icon/home-v2.svg" style="width: 30px; height: 30px;" alt="">
+            <img class="" src="/icon/home-v4.svg" style="width: 30px; height: 30px;" alt="">
             <h6 class="py-2 left-side-text">Home</h6>
         </li>
         <li onclick="location.href='/admin/category';"  class="list-group-item text-center">
@@ -26,12 +26,12 @@
         </li>
         <li onclick="location.href='/admin/user';"  class="list-group-item text-center">
             <br>
-            <img class="" src="/icon/user-v2.svg" style="width: 30px; height: 30px;" alt="">
+            <img class="" src="/icon/user-v4.svg" style="width: 30px; height: 30px;" alt="">
             <h6 class="py-2 left-side-text">User</h6>
         </li>
         <li onclick="location.href='/admin/question';"  class="list-group-item text-center">
             <br>
-            <img class="" src="/icon/question-v2.svg" style="width: 30px; height: 30px;" alt="">
+            <img class="" src="/icon/question-v4-1.svg" style="width: 30px; height: 30px;" alt="">
             <h6 class="py-2 left-side-text">Question</h6>
         </li>
         <li onclick="location.href='/admin/feedback';"  class="list-group-item text-center">
@@ -41,7 +41,7 @@
         </li>
         <li onclick="location.href='/admin/customize';"  class="list-group-item text-center">
             <br>
-            <img class="" src="/icon/setting-v2.svg" style="width: 30px; height: 30px;" alt="">
+            <img class="" src="/icon/setting-v4.svg" style="width: 30px; height: 30px;" alt="">
             <h6 class="py-2 left-side-text">Setting</h6>
         </li>
         <hr>
