--- a/Controller/src/main/resources/templates/navbar/__navbar.html
+++ b/Controller/src/main/resources/templates/navbar/__navbar.html
@@ -1,3 +1,10 @@
+<style>
+     .icon-linear-color{
+        background: #b93d5c;
+        -webkit-background-clip: text;
+	    -webkit-text-fill-color: transparent;
+    }
+</style>
 <nav class="navbar navbar-expand-lg bg-white border-bottom pb-0" >
     <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarTopRightSide" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon ">
@@ -24,22 +31,22 @@
              -->
             <li class="nav-item  d-none d-lg-block">
                 <a class="nav-link text-dark" href="#">
-                    <h5>Home</h5>
+                    <h5 class="icon-linear-color">Home</h5>
                 </a>
             </li>
             <li class="nav-item  d-none d-lg-block">
                 <a class="nav-link text-center text-dark" href="#">
-                    <h5>Category</h5>
+                    <h5 class="icon-linear-color">Category</h5>
                 </a>
             </li>
             <li class="nav-item  ">
                 <a class="nav-link text-center  d-none d-lg-block" href="#">  
-                    <i class="material-icons-new outline-notifications md-24"></i>
+                    <img class="" src="/icon/notification-navbar-v2.svg" style="width: 28px; height: 28px;" alt="">
                 </a>
             </li>
             <li class="nav-item ">
                 <a class="nav-link text-center  d-none d-lg-block" href="#">  
-                    <i class="material-icons-new outline-account_circle md-36"></i>
+                    <img class="" src="/icon/user-navbar-v2.svg" style="width: 30px; height: 30px;" alt="">
                 </a>
             </li>
         </ul>
